path sampler polishing